# rknn-toolkit2

rknn-toolkit-lite2/examples/yolov5/: test.py
rknn_toolkit_lite2/examples/yolov5/cam/: test.py
rknn_toolkit_lite2/examples/yolov5/image/: test.py
rknpu2/examples/rknn_cam_demo/: CMakeLists.txt
